code/typescript/InvestmentBankingOfficeRefresh/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Investment Banking Office Refresh client library for JavaScript

[![npm](https://img.shields.io/npm/v/@factset/sdk-investmentbankingofficerefresh)](https://www.npmjs.com/package/@factset/sdk-investmentbankingofficerefresh)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Service for refreshing models with refreshable FactSet objects (e.g., =FDS codes)

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.1.0
- Package version: 0.20.2
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 14

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-investmentbankingofficerefresh@0.20.2
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-investmentbankingofficerefresh@0.20.2
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=14. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code




```javascript
const { ApiClient, ModelRefreshApi } = require('@factset/sdk-investmentbankingofficerefresh');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new ModelRefreshApi();
const body = "/path/to/file"; // File | 
const opts = {
  'nowHandlingEnabled': true, // Boolean | Option to handle =NOW codes.
  'refreshAutoFilters': true, // Boolean | Option to refresh codes in autofilters.
  'resizeArrays': true // Boolean | Option to resize arrays
};

// Call api endpoint
apiInstance.postWorkbook(body, opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```



## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/office-refresh/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*investmentbankingofficerefresh.ModelRefreshApi* | [**getFileById**](docs/ModelRefreshApi.md#getFileById) | **GET** /refresh/{id} | Retrieve a calculated file by resource ID.
*investmentbankingofficerefresh.ModelRefreshApi* | [**getStatusById**](docs/ModelRefreshApi.md#getStatusById) | **GET** /refresh/{id}/status | Get the status of the refresh job with the given resource ID
*investmentbankingofficerefresh.ModelRefreshApi* | [**postWorkbook**](docs/ModelRefreshApi.md#postWorkbook) | **POST** /refresh | Upload a model


## Documentation for Models

 - [investmentbankingofficerefresh.Error](docs/Error.md)
 - [investmentbankingofficerefresh.Errors](docs/Errors.md)
 - [investmentbankingofficerefresh.JobStatus](docs/JobStatus.md)
 - [investmentbankingofficerefresh.JobStatusData](docs/JobStatusData.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
